--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html>
 <head>
     <title>Portfolio</title>
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src=IMG_20250124_122519.jpg alt="Your Profile Picture" class="profile-picture">
+            <img src= alt="Your Profile Picture" class="profile-picture">
             <h1>E.yamini</h1>
             <p>Assistant professor </p>
         </div>
