--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="./yamu.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="yamu.jpg "alt="Your Profile Picture" class="profile-picture">
             <h1>yamini E</h1>
             <p>Assistant professor </p>
         </div>
